Bump Java to 21